--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "fast": "node index.js"
+    "test": "jest --config=jest.config.cjs"
+  },
+  "jest": {
+    "configFile": "jest.config.cjs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jsdom": "^22.1.0",
     "puppeteer": "^20.2.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.4",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0"
   }
 }
