--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "seo_poc",
+  "name": "generate-html",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "lib/index.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "jest --config=jest.config.cjs"
-  },
-  "jest": {
-    "configFile": "jest.config.cjs"
+    "test": "jest test",
+    "compile": "tsc -p ./tsconfig.json",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsdom": "^21.1.1",
+    "@types/puppeteer": "^7.0.4",
     "jsdom": "^22.1.0",
-    "puppeteer": "^20.2.1"
+    "puppeteer": "^20.5.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.4",
     "babel-jest": "^29.5.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "ts-jest-resolver": "^2.0.1",
+    "typescript": "^5.1.3",
+    "husky": "^8.0.0"
   }
 }
